// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TournamentView Component. Full Path. Matches snapshot. 1`] = `
<div
  className="tournament"
>
  <div
    className="round"
  >
    <div
      className="round__list"
    >
      <div
        className="match"
      >
        <div
          className="match__list"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="BAX"
                src="https://api.adorable.io/avatars/480/BAX"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                BAX
              </strong>
            </div>
          </div>
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="BOO"
                src="https://api.adorable.io/avatars/480/BOO"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                BOO
              </strong>
            </div>
          </div>
        </div>
        <div
          className="match__winner match__winner--deciding"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="BAX"
                src="https://api.adorable.io/avatars/480/BAX"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                BAX
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TournamentView Component. No Path. Matches snapshot. 1`] = `
<div
  className="tournament"
>
  <div
    className="round"
  >
    <div
      className="round__list"
    >
      <div
        className="match"
      >
        <div
          className="match__list"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="BAR"
                src="https://api.adorable.io/avatars/480/BAR"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                BAR
              </strong>
            </div>
          </div>
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="FAZ"
                src="https://api.adorable.io/avatars/480/FAZ"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                FAZ
              </strong>
            </div>
          </div>
        </div>
        <div
          className="match__winner match__winner--deciding"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="BAR"
                src="https://api.adorable.io/avatars/480/BAR"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                BAR
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TournamentView Component. Partial Path. Matches snapshot. 1`] = `
<div
  className="tournament"
>
  <div
    className="round"
  >
    <div
      className="round__list"
    >
      <div
        className="match"
      >
        <div
          className="match__list"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="FOX"
                src="https://api.adorable.io/avatars/480/FOX"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                FOX
              </strong>
            </div>
          </div>
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="FAA"
                src="https://api.adorable.io/avatars/480/FAA"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                FAA
              </strong>
            </div>
          </div>
        </div>
        <div
          className="match__winner match__winner--deciding"
        >
          <div
            className="participant participant-entry"
          >
            <div
              className="participant-entry__avatar"
            >
              <img
                alt="FOX"
                src="https://api.adorable.io/avatars/480/FOX"
              />
            </div>
            <div
              className="participant-entry__name"
            >
              <strong>
                FOX
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
